--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "devDependencies": {
     "semantic-release": "15.13.3"
+  },
+  "dependencies": {
+    "semantic-release-vsce": "^2.2.6"
   }
 }
