--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
     "@semantic-release/github": "^5.2.10",
     "semantic-release-vsce": "^2.2.6"
   }
