--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semantic-release-config-bitworkers",
   "version": "0.0.0-semantically-released",
   "description": "Semantic release configuration for Bitworkers",
-  "main": "index.js",
+  "main": "src/index.js",
   "files": [
     "src"
   ],
